# soundlaser-rs

./: Cargo.toml  README.mkdn  build.rs  memory.x  openocd.cfg  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
