[package]
name = "soundlaser"
version = "0.1.0"
edition = "2024"

[features]
disable-iwdg = []

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
stm32-metapac = {version = "16.0.0", features = ["rt","pac","stm32f051c6"]}

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
overflow-checks = true

[[bin]]
name = "soundlaser"
test = false
bench = false
